# Hospitality-Multi-Agent

./: .env.example  .gitignore  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANAGE.md  README.md  TASK_PLAN.md  __init__.py  example_usage.py  pyproject.toml  requirements.txt  setup.py  test_firestore.py  validate.sh  validate_structure.py
agents/: MANAGE.md  __init__.py
agents/availability/: MANAGE.md  __init__.py  agent.py  prompts.py  ranking.py
agents/booking/: MANAGE.md  __init__.py  agent.py  idempotency.py  prompts.py
agents/confirmation/: MANAGE.md  __init__.py  agent.py
agents/inquiry/: MANAGE.md  __init__.py  agent.py  prompts.py  tools.py
agents/precheckin/: MANAGE.md  __init__.py  agent.py
agents/survey/: MANAGE.md  __init__.py  agent.py
agents/upsell/: MANAGE.md  __init__.py  agent.py
config/: MANAGE.md  feature_flags.yaml  firestore_indexes.json  settings.py
logs/: MANAGE.md
mcp_servers/: MANAGE.md
mcp_servers/firestore/: MANAGE.md  __init__.py  models.py  server.py  transactions.py
mcp_servers/monitoring/: MANAGE.md
mcp_servers/notify/: MANAGE.md
memory/: MANAGE.md  __init__.py  long_term.py  short_term.py
orchestrator/: MANAGE.md  __init__.py  main.py
tests/: MANAGE.md  __init__.py
tests/test_agents/: MANAGE.md  test_availability.py  test_availability_agent.py  test_booking.py  test_booking_agent.py  test_confirmation_agent.py  test_inquiry_agent.py
tests/test_integration/: MANAGE.md  test_full_flow.py
tests/test_mcp/: MANAGE.md
utils/: MANAGE.md  __init__.py  formatters.py  validators.py
(+6 files in other folders)
